respontech, man fer fix